--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iconify-json/lucide": "^1.2.45",
     "@iconify-json/simple-icons": "^1.2.37",
     "@nuxt/ui": "^3.1.3",
+    "@nuxthub/core": "0.8.27",
     "nuxt": "^3.17.4"
   },
   "devDependencies": {
